--- a/index.html
+++ b/index.html
@@ -1,7 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Emu Otori</title>
+    <link rel='stylesheet' href='index.css'>
+    <link rel='stylesheet' href='flexbox.css'>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+
+    <!--START HEADER-->
+    <header class = 'header'>
+
+        <div class = 'container'>
+            <div class = 'header-row'>
+                <!--START BLOCK LOGO-->
+                <div class = 'header-logo'>
+                    <img class = 'logo-img' src='img/emu-09.png'></img>
+                    <h1 class = 'logo-title'>Emu Otori</h1>
+                </div>
+                <!--END BLOCK LOGO-->
+
+                <!--START BLOCK MENU-->
+                <div class = 'header-menu'>
+                    <ul class = 'menu'>
+                        <li class = 'menu-item'>
+                            <a class = 'menu-link' href ='#'>Home</a>
+                        </li>
+                        <li class = 'menu-item'>
+                            <a class = 'menu-link' href ='#'>About</a>
+                        </li>
+                        <li class = 'menu-item'>
+                            <a class = 'menu-link' href ='#metka'>Cards</a>
+                        </li>
+                    </ul>
+                </div>
+                <!--END BLOCK MENU-->
+            </div>
+        </div>
+
+    </header>
+    <!--END HEADER-->
+
+    <!--START MAIN-->
+    <main class = 'main'>
+        <!--START BANNER SECTION-->
+        <section class = 'banner-section'>
+            <div class = 'container'>
+                <div class = 'banner-text'>
+                    <h1 class = 'banner-title'>Cards</h1>
+                    <div class = 'banner-description'>
+                        <a href = '#' class = 'menu-link'>Home</a> <a href = '#' class = 'menu-link'>About</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--END BANNER SECTION-->
+
+        <!--START CARDS SECTION-->
+        <section class = 'cards-section'>
+            <a name = 'metka'>
+            <div class = 'container'>
+                    <a name = 'metka'></a>
+                <div class = 'cards-text'>
+                    <h1 class = 'cards-title'>The Most Popular Emu Otori Cards</h1>
+                    <div class = 'cards-description'>But other not less pretty and cool</div>
+                </div>
+
+                <div class = 'cards'>
+                    <div class = 'cards-row'>
+                        <div class = 'card'>
+
+                            <img class = 'card-img' src="img/card_after_training1.png">
+                            <div class = 'card-body'>
+                                <h3 class = 'card-title'>An Irreplaceable Smile</h3>
+                                <div class = 'card-text'>I feel all warm and fuzzy inside!</div>
+                                <div class = 'card-button'>
+                                    <a class = 'card-link' href = '#'>View Details</a>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class = 'card'>
+
+                            <img class = 'card-img' src="img/card_after_training2.png">
+                            <div class = 'card-body'>
+                                <h3 class = 'card-title'>Fishing Before The Storm</h3>
+                                <div class = 'card-text'>Oh! I got something☆</div>
+                                <div class = 'card-button'>
+                                    <a class = 'card-link' href = '#'>View Details</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = 'card'>
+
+                            <img class = 'card-img' src="img/card_after_training3.png">
+                            <div class = 'card-body'>
+                                <h3 class = 'card-title'>Operation Smile Was A Great Success!</h3>
+                                <div class = 'card-text'>Tsukasa, you smiled just now!</div>
+                                <div class = 'card-button'>
+                                    <a class = 'card-link' href = '#'>View Details</a>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+        <!--START CARDS SECTION-->
+    </main>
+    <!--END MAIN-->
+
+    <!--START FOOTER-->
+    <footer class = 'footer'>
+        <div class = 'container'>
+            <div class = 'footer-row'>
+                <div class = 'search'>
+                    <div class = 'copyright'>Copyright 2019 ALL right reserved By....</div>
+                    
+                </div>
+                <div class = 'social-networks'>
+                    <a href="#"><img class = 'footer-logo' src='img/vk.png'></a>
+                    <a href="#"><img class = 'footer-logo' src='img/instagram.png'></a>
+                    <a href="#"><img class = 'footer-logo' src='img/youtube.png'></a>
+                    <a href="#"><img class = 'footer-logo' src='img/facebook.png'></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--END FOOTER-->
+
 </body>
 </html>
